--- a/src/blocks/button/button.scss
+++ b/src/blocks/button/button.scss
@@ -1,30 +1,34 @@
 .button {
-  box-sizing: border-box;
   display: inline-block;
+  box-sizing: border-box;
   max-width: 100%;
-  overflow: hidden;
+  height: 50px;
   margin: 0;
-  border: 0;
+  padding: 0 65px;
+  overflow: hidden;
+  font-weight: 700;
+  font-size: 1em;
+  font-size: 15px;
+  line-height: 46px;
+  font-family: inherit;
   vertical-align: middle;
+  text-align: center;
+  color: $text-color;
+  color: #ffffff;
+  text-transform: none;
+  text-transform: uppercase;
+  text-decoration: none;
   white-space: nowrap;
   text-overflow: ellipsis;
-  user-select: none;
-  text-align: center;
-  font-size: 1em;
-  font-family: inherit;
-  text-decoration: none;
-  text-transform: none;
-  color: $text-color;
   background-image: none;
+  border: 2px solid #e8e8e8;
   cursor: pointer;
+  transition: all 0.25s ease;
+  user-select: none;
 
-  &:hover,
-  &:focus {
-  }
-
-  &:active {
-  }
-
-  &:disabled {
+  &:hover {
+    color: #ffffff;
+    background-color: #fdbe11;
+    border: 2px solid #fdbe11;
   }
 }
