--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -1,5 +1,6 @@
 .logo {
-
-  $block-name:       &; // #{$block-name}__element {}
-
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 1;
+  color: #000000;
 }
