--- a/src/blocks/page-main/page-main.scss
+++ b/src/blocks/page-main/page-main.scss
@@ -1,5 +1,55 @@
 .page-main {
+  height: 100vh;
+  padding-top: 140px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 
-  $block-name:       &; // #{$block-name}__element {}
+  .container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 
+  .row {
+    &:first-of-type {
+      margin-top: auto;
+      margin-bottom: auto;
+    }
+  }
+}
+
+h1 {
+  max-width: 670px;
+  margin-bottom: 35px;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 73px;
+  color: #ffffff;
+}
+
+.page-main-advantages {
+  margin: 0;
+  margin-top: auto;
+  margin-top: -65px;
+  margin-bottom: 65px;
+  padding: 0;
+  list-style: none;
+
+  li {
+    font-weight: 700;
+    color: #ffffff;
+
+    &:not(:last-of-type) {
+      margin-bottom: 10px;
+    }
+  }
+
+  a {
+    color: #fdbe11;
+
+    &:hover {
+      text-decoration: underline !important;
+    }
+  }
 }
