--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,3 +21,4 @@
 @import './src/blocks/button/button.scss';
 @import './src/blocks/burger/burger.scss';
 @import './src/blocks/close/close.scss';
+@import './src/css/style.scss';
