--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -3,4 +3,12 @@
   font-size: 30px;
   line-height: 1;
   color: #000000;
+
+  @include media-breakpoint-down(lg) {
+    font-size: 25px;
+  }
+
+  @include media-breakpoint-down(xs) {
+    font-size: 20px;
+  }
 }
