--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -5,6 +5,38 @@
   left: 0;
   z-index: 5;
   width: 100%;
+
+  &.full-width {
+    box-shadow: 0px 1px 3px 0px rgba(#000000, 0.3);
+
+    .container {
+      max-width: 100% !important;
+      padding: 0 !important;
+      transition: all 0.25s ease;
+    }
+
+    .row {
+      &:first-of-type {
+        display: none;
+      }
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
+    box-shadow: 0px 1px 3px 0px rgba(#000000, 0.3);
+
+    .container {
+      max-width: 100% !important;
+      padding: 0 !important;
+      transition: all 0.25s ease;
+    }
+
+    .row {
+      &:first-of-type {
+        display: none;
+      }
+    }
+  }
 }
 
 .contacts-list {
@@ -16,9 +48,17 @@
   padding: 0;
   list-style: none;
 
+  @include media-breakpoint-down(sm) {
+    display: none;
+  }
+
   li {
     &:not(:last-of-type) {
       margin-right: 55px;
+
+      @include media-breakpoint-down(lg) {
+        margin-right: 35px;
+      }
     }
   }
 
@@ -40,6 +80,10 @@
   height: 80px;
   padding: 0 40px;
   background-color: #ffffff;
+
+  @include media-breakpoint-down(lg) {
+    padding: 0 20px;
+  }
 }
 
 .nav-list {
@@ -50,6 +94,10 @@
   margin-left: auto;
   padding: 0;
   list-style: none;
+
+  @include media-breakpoint-down(lg) {
+    display: none;
+  }
 
   li {
     &:not(:last-of-type) {
