--- a/src/blocks/page-main/page-main.scss
+++ b/src/blocks/page-main/page-main.scss
@@ -1,5 +1,6 @@
 .page-main {
   height: 100vh;
+  min-height: 680px;
   padding-top: 140px;
   background-repeat: no-repeat;
   background-position: center;
@@ -26,6 +27,15 @@ h1 {
   font-size: 72px;
   line-height: 73px;
   color: #ffffff;
+
+  @include media-breakpoint-down(lg) {
+    font-size: 55px;
+  }
+
+  @include media-breakpoint-down(xs) {
+    font-size: 35px;
+    line-height: 1.3;
+  }
 }
 
 .page-main-advantages {
