--- a/src/blocks/page-header/page-header.scss
+++ b/src/blocks/page-header/page-header.scss
@@ -6,6 +6,10 @@
   z-index: 5;
   width: 100%;
 
+  @include media-breakpoint-down(sm) {
+    position: absolute;
+  }
+
   &.full-width {
     box-shadow: 0px 1px 3px 0px rgba(#000000, 0.3);
 
@@ -18,6 +22,10 @@
     .row {
       &:first-of-type {
         display: none;
+
+        @include media-breakpoint-down(sm) {
+          display: flex;
+        }
       }
     }
   }
@@ -29,11 +37,16 @@
       max-width: 100% !important;
       padding: 0 !important;
       transition: all 0.25s ease;
+
+      @include media-breakpoint-down(sm) {
+        display: flex;
+        flex-direction: column-reverse;
+      }
     }
 
     .row {
       &:first-of-type {
-        display: none;
+        // display: none;
       }
     }
   }
@@ -49,7 +62,11 @@
   list-style: none;
 
   @include media-breakpoint-down(sm) {
-    display: none;
+    // display: none;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px 0;
+    height: auto;
   }
 
   li {
@@ -59,6 +76,15 @@
       @include media-breakpoint-down(lg) {
         margin-right: 35px;
       }
+
+      @include media-breakpoint-down(sm) {
+        margin-right: 0;
+      }
+    }
+
+    @include media-breakpoint-down(sm) {
+      flex-basis: 50%;
+      text-align: center;
     }
   }
 
