--- a/src/blocks/page-main/page-main.scss
+++ b/src/blocks/page-main/page-main.scss
@@ -6,6 +6,12 @@
   background-position: center;
   background-size: cover;
 
+  @include media-breakpoint-down(sm) {
+    height: auto;
+    min-height: 0;
+    padding-top: 165px;
+  }
+
   .container {
     display: flex;
     flex-direction: column;
@@ -45,6 +51,11 @@ h1 {
   margin-bottom: 65px;
   padding: 0;
   list-style: none;
+
+  @include media-breakpoint-down(sm) {
+    margin-top: 35px;
+    margin-bottom: 35px;
+  }
 
   li {
     font-weight: 700;
