--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -385,8 +385,18 @@ svg {
     top: 15px;
     right: 15px;
   }
+
+  img {
+    width: 100%;
+  }
 }
 
 .modal-content {
   padding: 55px 25px 32.5px;
+}
+
+.modal-dialog {
+  @media (min-width: 576px) {
+    min-width: 650px;
+  }
 }
